# mcwindrose

./: README.md  pyproject.toml
data/: blindern.csv  eksempel.csv  haugesund.csv  hovringen.csv  utsira.csv  vigra.csv
notebooks/: data_exploration.ipynb  vigra_comparison.ipynb
