[tool.poetry]
name = "mcwindrose"
version = "0.1.0"
description = ""
authors = ["timsta95 <75481985+timsta95@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
windrose = "^1.8.0"
pandas = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
